fixed email link, dropdown spacing

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -57,6 +57,7 @@ header#nav-header {
             color: white;
         }
         ul {
+            padding-bottom: 5px;
             z-index: 5;
             left: auto;
             margin-left: -10px;
